ingress/ingress-namebased.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-namebased-red
spec:
  ingressClassName: nginx
  rules:
  - host: red.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service-red
            port: 
              number: 4242
  - host: blue.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service-blue
            port: 
              number: 4343
